<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="30dp">

        <TextView
            android:id="@+id/new_tag_header"
            style="@style/ActivityTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_new_tag"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <EditText
            android:id="@+id/new_tag_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_tag_hint"
            android:importantForAutofill="no"
            android:inputType="text" />

        <Button
            android:id="@+id/new_tag_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/activity_button"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/new_save_button_text" />
    </LinearLayout>
</ScrollView>