<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/recipe_overview_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            style="@style/ActivityTitle"/>
        <CheckBox
            android:id="@+id/recipe_overview_star"
            style="?android:attr/starStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginHorizontal="25dp"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/recipeOverViewGroup">
            <TextView
                android:id="@+id/recipe_source_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/recipe_source"
                style="@style/recipeOverViewLabel"/>

            <TextView
                android:id="@+id/recipe_source"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text=""
                style="@style/recipeOverViewValue"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/recipeOverViewGroup">

            <TextView
                android:id="@+id/recipe_tags_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/recipe_tags"
                style="@style/recipeOverViewLabel"/>

            <TextView
                android:id="@+id/recipe_tags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                style="@style/recipeOverViewValue"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/recipeOverViewGroup">

        <TextView
                android:id="@+id/recipe_prep_time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/recipe_prep_time"
                style="@style/recipeOverViewLabel"/>

            <TextView
                android:id="@+id/recipe_prep_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                style="@style/recipeOverViewValue"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="horizontal"
            style="@style/recipeOverViewGroup">

        <TextView
                android:id="@+id/recipe_cooking_time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_cooking_time"
                style="@style/recipeOverViewLabel"/>

            <TextView
                android:id="@+id/recipe_cooking_time"
                android:layout_width="wrap_content"
                android:padding="5dp"
                android:layout_height="wrap_content"
                style="@style/recipeOverViewValue"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/recipeOverViewGroup">

        <TextView
                android:id="@+id/recipe_cooking_temp_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/recipe_cooking_temp"
                style="@style/recipeOverViewLabel"/>

            <TextView
                android:id="@+id/recipe_cooking_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                style="@style/recipeOverViewValue"
                android:text=""/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/recipeOverViewGroup">

        <TextView
                android:id="@+id/recipe_ingredients_label"
                android:layout_width="wrap_content"
                android:padding="5dp"
                android:layout_height="wrap_content"
                style="@style/recipeOverViewLabel"
                android:text="@string/ingredients"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ingredients_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            style="@style/recipeOverViewGroup">

        <TextView
                android:id="@+id/recipe_instructions_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                style="@style/recipeOverViewLabel"
                android:text="@string/instructions"/>

            <TextView
                android:id="@+id/recipe_instructions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                style="@style/recipeOverViewValue"
                android:text=""/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>